--- a/app/globals.css
+++ b/app/globals.css
@@ -15,11 +15,18 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+/* 
+.quicksand {
+  font-family: "Quicksand", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-quicksand), Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -43,4 +50,6 @@ a {
 
 h1 {
   font-size: 50px;
+  font-family: var(--font-quicksand);
+  font-weight: 700;
 }
