--- a/app/page.module.css
+++ b/app/page.module.css
@@ -36,6 +36,7 @@
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
+  color: #393352;
 }
 
 .main ol {
@@ -183,7 +184,8 @@ a.secondary {
   flex-direction: column;
   gap: 1.5rem;
   padding: 2rem;
-  background: var(--gray-alpha-100);
+  background: #e5e4ee;
+  /* background: #e3e0f2; */
   border-radius: 1rem;
 }
 
@@ -213,30 +215,6 @@ a.secondary {
 .textarea:focus {
   outline: none;
   border-color: #0070f3;
-}
-
-.checkboxLabel {
-  display: flex !important;
-  align-items: center !important;
-  gap: 0.5rem !important;
-  cursor: pointer !important;
-  font-size: 1rem !important;
-  color: var(--foreground) !important;
-  background: transparent !important;
-  padding: 8px 0 !important;
-}
-
-.checkboxLabel input[type="checkbox"] {
-  appearance: auto !important;
-  -webkit-appearance: auto !important;
-  width: 18px !important;
-  height: 18px !important;
-  cursor: pointer !important;
-  accent-color: #0070f3 !important;
-  opacity: 1 !important;
-  position: static !important;
-  margin: 0 !important;
-  border: 1px solid var(--foreground) !important;
 }
 
 .optionRow {
@@ -321,4 +299,44 @@ a.secondary {
 .custom-button:hover {
   background-color: rgba(143, 128, 204, 0.1) !important;
   color: #6f53a3 !important;
+}
+
+.omni {
+  font-style: Quicksand;
+  font-size: 30px;
+  font-weight: 600;
+  padding: 15px;
+  border: 1px solid #1cb25c;
+  border-radius: 20px;
+  background-color: #d4f2de;
+  width: 100%;
+  text-align: center;
+  max-width: 600px;
+  color: #1a582b;
+
+  /* text-decoration: underline;
+  color: #118342; */
+}
+
+.checkboxLabel {
+  display: flex !important;
+  align-items: center !important;
+  gap: 0.5rem !important;
+  cursor: pointer !important;
+  background: transparent !important;
+  padding: 8px 0 !important;
+  font-weight: 400 !important;
+}
+
+.checkboxLabel input[type="checkbox"] {
+  width: 18px !important;
+  height: 18px !important;
+  cursor: pointer !important;
+  accent-color: #0070f3 !important;
+  opacity: 1 !important;
+  position: static !important;
+  margin: 0 !important;
+  border: 1px solid var(--foreground) !important;
+  padding: 8px 0 !important;
+  font-weight: 400 !important;
 }
