--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,7 +11,7 @@
   min-height: 100vh;
   padding: 80px;
   gap: 64px;
-  font-family: var(--font-geist-sans);
+  font-family: Quicksand;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -40,7 +40,6 @@
 }
 
 .main ol {
-  font-family: var(--font-geist-mono);
   padding-left: 0;
   margin: 0;
   font-size: 14px;
@@ -54,7 +53,6 @@
 }
 
 .main code {
-  font-family: inherit;
   background: var(--gray-alpha-100);
   padding: 2px 4px;
   border-radius: 4px;
@@ -302,7 +300,6 @@ a.secondary {
 }
 
 .omni {
-  font-style: Quicksand;
   font-size: 30px;
   font-weight: 600;
   padding: 15px;
@@ -339,4 +336,21 @@ a.secondary {
   border: 1px solid var(--foreground) !important;
   padding: 8px 0 !important;
   font-weight: 400 !important;
+}
+
+.strong {
+  font-weight: 600;
+}
+
+.h2 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.emoji {
+  font-size: 20px;
+}
+
+.example {
+  font-size: 14px;
 }
